tests/ui/basic/iterate_non_iterable.rs
use metamatch::eval;

fn main() {
    eval! {
        for x in 42 {
            x
        }
    };
}
